# BaseLib

./: .gitignore
BaseUtils/: .cproject  .project  Base.h  BaseThread.cpp  BaseThread.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Handler.cpp  Handler.h  Looper.cpp  Looper.h  LooperRoster.cpp  LooperRoster.h  Message.cpp  Message.h  Result.h  SendableObject.h
BaseUtils/include/baseutils/: Buffer.h  Handler.h  Looper.h  Message.h  Parcelable.h  Result.h  Singleton.h
BaseUtils_gtest/: .cproject  .project  BaseTestThread.h  LooperTest.cpp  SmartPtrTest.cpp  ThreadTest.cpp
