CMAKE_MINIMUM_REQUIRED ( VERSION 2.8 )
PROJECT ( "BaseUtils" )

SET ( CMAKE_VERBOSE_MAKEFILE true )
SET ( CMAKE_BUILD_TYPE Debug )

INCLUDE_DIRECTORIES (
    ${PROJECT_SOURCE_DIR}
    ${PROJECT_SOURCE_DIR}/include
)

file(GLOB SRC_FILES *.cpp)
file(GLOB INC_FILES include/*.h)

LINK_LIBRARIES(
)

#ADD_LIBRARY ( ${PROJECT_NAME} SHARED ${SRC_FILES} )
ADD_LIBRARY ( ${PROJECT_NAME} STATIC ${SRC_FILES} )

INSTALL (
)

SET ( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BUILD_TYPE}/lib )
